 12/09/2002 Ron Steinke <rsteinke@w-link.net>,
    - created basic_socket, a virtual base class
      for basic_socket_stream and basic_socket_server,
      so that the polling code has a common base
      with getSocket() to access
    - created basic_socket_poll polling class
    - changed tcp_socket_stream::is_ready() to isReady()
      to match standards for function naming, left is_ready()
      as a wrapper of isReady() for compatibility
 2002-11-04 Al Riddoch <alriddoch@zepler.org>,
    - Add doxygen docs.
 20/28/2002 Michael Koch <konqueror@gmx.de>
    - Added support for GNU/Hurd.
    - Added man page for skstream-config.
    - Added support for NOCONFIGURE in autogen.sh
 10/14/2002 Malcolm Walker <malcolm@worldforge.org>
    - Added call to Sleep(0) in win32 nonblocking connect
 07/22/2002 Ron Steinke <rsteinke@w-link.net>,
    - changed sizeof(sockaddr) to sizeof(sockaddr_in) in
      several locations, so that we pass the correct size
      of in_peer and out_peer in socketbuf
    - reordered initializers in socketbuf constructors
      to match their declaration order in the class
 07/21/2002 Al Riddoch <alriddoch@zepler.org>,
    - configure.in: Added --enable-debug option for debug build,
      increment version and interface version due to changes, add
      news item, and release.
 07/16/2002 Dan Tomalesky <grim@xynesis.com>
    - skstream.cpp: added a small fix to a bug with is_ready.  wasn't
      compiling on linux and seems code was wrong in the select because it was
      doing |= to the select() instead of != (i.e., if it doesn't return 1,
      there is no ready socket or an error)
 07/15/2002 Al Riddoch <alriddoch@zepler.org>,
            Malcolm Walker <malcolm@worldforge.org>
    - skstream.cpp: Handle nonblocking connect in win32
		- fix call in is_ready() for TCP nonblocking connect
    - skstream.h: Include correct streambuf header on Linux.
 07/03/2002 James Turner <james@worldforge.org>
	-Added configuration case for Darwin / OS-X