@@ -1,9 +1,9 @@
-lib_LTLIBRARIES = libskstream.la
-libskstream_la_LDFLAGS = -version-info @SKSTREAM_VERSION_INFO@
+lib_LTLIBRARIES = libskstream-0.2.la
+libskstream_0_2_la_LDFLAGS = -version-info @SKSTREAM_VERSION_INFO@
 
-libskstream_la_SOURCES = skstream.cpp skserver.cpp skpoll.cpp
+libskstream_0_2_la_SOURCES = skstream.cpp skserver.cpp skpoll.cpp
 
-libskstreamincludedir = $(includedir)/skstream
+libskstreamincludedir = $(includedir)/skstream-0.2/skstream
 libskstreaminclude_HEADERS = skstream.h skserver.h skpoll.h sasproto.h
 
 m4datadir = $(datadir)/aclocal
@@ -11,6 +11,9 @@ m4data_DATA = skstream.m4
 
 manpagedir = $(mandir)/man1
 manpage_DATA = skstream-config.1
+
+pkgconfigdir = $(libdir)/pkgconfig
+pkgconfig_DATA = skstream-0.2.pc
 
 bin_SCRIPTS = skstream-config
 
