@@ -182,7 +182,7 @@ dnl test for support programs
 AC_CHECK_PROG(SK_ZIP, zip, zip, no)
 AM_CONDITIONAL(HAVE_PROG_ZIP, test x$ac_cv_prog_SK_ZIP = xzip)
 
-SKSTREAM_LIBS="-lskstream"
+SKSTREAM_LIBS="-lskstream-0.2"
 # There might be a better way to do this.
 AC_MSG_CHECKING(for mingw32)
 AC_TRY_COMPILE(,[
@@ -211,4 +211,5 @@ AC_OUTPUT([
 	test/Makefile
 	skstream-config
 	skstream.spec
+	skstream-0.2.pc
 ])
