@@ -1,3 +1,5 @@
+ 2003-01-31 Al Riddoch <alriddoch@zepler.org>,
+    - Convert to using pkg-config
  12/09/2002 Ron Steinke <rsteinke@w-link.net>,
     - created basic_socket, a virtual base class
       for basic_socket_stream and basic_socket_server,
